fixed tooltips. lowered chips containter z-index

--- a/styles/chips.css
+++ b/styles/chips.css
@@ -10,7 +10,7 @@
   top: 56px;
   left: 80px;
   right: 0px;
-  z-index: 100;
+  z-index: 50;
   background-color: white;
 }
 .tags-below-header {
