--- a/styles/header.css
+++ b/styles/header.css
@@ -127,12 +127,11 @@
   padding: 8px;
   border-radius: 4px;
   font-size: 13px;
-  bottom: -45px;
+  bottom: -55px;
   opacity: 0;
   transition: opacity 0.15s;
   pointer-events: none;
   white-space: nowrap;
-  /* z-index: 250; */
 }
 .search-button:hover .tooltip,
 .voice-search-button:hover .tooltip,
